Fixed broken layouts and styles in login component, pressing enter while focused on any of the input fields submits data

--- a/src/app/login/login.component.less
+++ b/src/app/login/login.component.less
@@ -1,18 +1,25 @@
-.login-root {
-  background: cornflowerblue;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-
 .container {
+  position: absolute;
   width: 400px;
+  height: fit-content;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
   background: white;
   padding: 20px;
   border-radius: 20px;
   border: 1px solid #ced4da;
+}
+
+.login-root {
+  background: cornflowerblue;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .error {
